--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -1,10 +1,19 @@
 {
-  "version": "0.6.0",
+  "version": "0.6.1",
   "name": "Giphub",
   "manifest_version": 2,
-  "description": "Quickly add gifs to your github comments",
+  "description": "Quickly add GIFs to your GitHub comments",
   "browser_action": {
-    "default_title": "Giphub"
+    "default_title": "Giphub",
+    "default_icon": {
+      "16": "img/icon-16.png",
+      "32": "img/icon-32.png"
+    }
+  },
+  "applications": {
+    "gecko": {
+      "id": "{9946ab6b-28af-4e04-a523-30cf62f395d1}"
+    }
   },
   "icons": {
     "16": "img/icon-16.png",
@@ -16,7 +25,6 @@
   },
   "permissions": [
     "tabs",
-    "webRequest",
     "https://github.com/*"
   ],
   "content_security_policy": "default-src 'self' https://api.giphy.com; script-src 'self'; style-src * 'unsafe-inline'; img-src 'self' data:;"
