--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "Giphub",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Quickly add gifs to your github comments",
   "scripts": {
     "dev": "node scripts/dev",
     "build": "node scripts/build",
     "compress": "node scripts/compress",
     "clean": "rimraf build/ dev/ *.zip *.crx",
-    "lint": "eslint app chrome test scripts webpack/*.js"
+    "lint": "eslint app chrome scripts webpack/*.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
-    "babel-loader": "7.1.4",
+    "babel-eslint": "8.2.6",
+    "babel-loader": "7.1.5",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
     "babel-plugin-transform-runtime": "6.23.0",
@@ -33,35 +33,36 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-runtime": "6.26.0",
-    "chromedriver": "2.38.3",
-    "css-loader": "0.28.11",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
+    "chromedriver": "2.41.0",
+    "css-loader": "1.0.0",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
     "jade": "1.11.0",
     "minimist": "1.2.0",
-    "postcss-loader": "2.1.5",
+    "postcss-loader": "3.0.0",
     "react-addons-test-utils": "15.6.2",
     "rimraf": "2.6.2",
     "shelljs": "0.8.2",
-    "style-loader": "0.20.2",
-    "webpack-hot-middleware": "2.22.2",
+    "style-loader": "0.22.1",
+    "webpack-cli": "3.1.0",
+    "webpack-hot-middleware": "2.22.3",
     "webpack-httpolyglot-server": "0.3.0"
   },
   "dependencies": {
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
     "file-loader": "1.1.11",
-    "prop-types": "^15.6.1",
-    "react": "16.4.0",
+    "prop-types": "^15.6.2",
+    "react": "16.4.2",
     "react-dock": "0.2.4",
-    "react-dom": "16.4.0",
+    "react-dom": "16.4.2",
     "react-redux": "5.0.7",
-    "redux": "3.7.2",
+    "redux": "4.0.0",
     "redux-thunk": "2.3.0",
-    "url-loader": "0.6.2",
-    "webpack": "3.11.0"
+    "url-loader": "1.1.0",
+    "webpack": "4.16.5"
   }
 }
