--- a/package.json
+++ b/package.json
@@ -42,19 +42,17 @@
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
     "jade": "1.11.0",
-    "minimist": "1.2.0",
     "postcss-loader": "3.0.0",
     "react-addons-test-utils": "15.6.2",
     "rimraf": "2.6.2",
-    "shelljs": "0.8.2",
     "style-loader": "0.22.1",
     "webpack-cli": "3.1.0",
-    "webpack-hot-middleware": "2.22.3",
-    "webpack-httpolyglot-server": "0.3.0"
+    "webpack-hot-middleware": "2.22.3"
   },
   "dependencies": {
     "classnames": "2.2.6",
     "file-loader": "1.1.11",
+    "minimist": "1.2.0",
     "prop-types": "^15.6.2",
     "react": "16.4.2",
     "react-dock": "0.2.4",
@@ -62,7 +60,9 @@
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0",
+    "shelljs": "0.8.2",
     "url-loader": "1.1.0",
-    "webpack": "4.16.5"
+    "webpack": "4.16.5",
+    "webpack-httpolyglot-server": "0.3.0"
   }
 }
