--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Giphub",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Quickly add gifs to your github comments",
   "scripts": {
     "dev": "node scripts/dev",
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
+    "crx": "3.2.1",
     "file-loader": "1.1.11",
     "minimist": "1.2.0",
     "prop-types": "^15.6.2",
